# youtube-downloader-cli

./: pyproject.toml  speedRun.sh
youtube_downloader/: __init__.py  cli.py
