[project]
name = "youtube-downloader"
version = "1.0.0"
description = "Download Youtube Videos in MP3 or MP4 format"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "yt-dlp>=2024.10.22"
]

[project.scripts]
youtube-download = "youtube_downloader.cli:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
